# mscoree-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  commit_msg.txt
examples/: enumerate_assemblies.rs  host_clr.rs
src/: functions.rs  guids.rs  interfaces.rs  lib.rs
src/interfaces/: clr_control.rs  clr_data.rs  clr_data_target.rs  clr_debugging.rs  clr_metahost.rs  clr_runtime_info.rs  clr_strong_name.rs  clr_task.rs  cor_debug.rs  cor_debug_appdomain.rs  cor_debug_callback.rs  cor_debug_code.rs  cor_debug_frame.rs  cor_debug_module.rs  cor_debug_process.rs  cor_debug_stepper.rs  cor_debug_thread.rs  cor_debug_value.rs  cor_jit.rs  cor_profiler.rs  cor_profiler_info.rs  cor_runtime_host.rs  data_target.rs  fusion.rs  metadata.rs  metadata_assembly.rs  metadata_emit.rs  metadata_import.rs  runtime_host.rs  sos_dac.rs  xclr_data_app_domain.rs  xclr_data_assembly.rs  xclr_data_exception.rs  xclr_data_frame.rs  xclr_data_method.rs  xclr_data_module.rs  xclr_data_process.rs  xclr_data_stack_walk.rs  xclr_data_task.rs  xclr_data_type.rs  (+2 more)
